// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List 组件测试 Base create 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props asyncLoading is node 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
        <div
          style="text-align: center; margin-top: 12px;"
        >
          没有更多数据了
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
      <div
        style="text-align: center; margin-top: 12px;"
      >
        没有更多数据了
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props footer is node 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
        <div
          class="t-list__footer"
        >
          <p>
            这是Footer
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
      <div
        class="t-list__footer"
      >
        <p>
          这是Footer
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props footer is string 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
        <div
          class="t-list__footer"
        >
          这是Footer
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
      <div
        class="t-list__footer"
      >
        这是Footer
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props header is node 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
        <div
          class="t-list__footer"
        >
          <p>
            这是Header
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
      <div
        class="t-list__footer"
      >
        <p>
          这是Header
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props header is string 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list"
      >
        <div
          class="t-list__header"
        >
          这是Header
        </div>
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list"
    >
      <div
        class="t-list__header"
      >
        这是Header
      </div>
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props layout 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list t-list--vertical-action"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list t-list--vertical-action"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props size 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list t-size-l"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list t-size-l"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props split 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list t-list--split"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list t-list--split"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 List Props stripe 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list t-list--stripe"
      >
        <ul
          class="t-list__inner"
        >
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
          <li
            class="t-list-item"
          >
            <div
              class="t-list-item-main"
            >
              列表内容列表内容列表内容
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list t-list--stripe"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 ListItem Props action & children 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          ListItem 组件
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作
              </a>
            </li>
          </ul>
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        ListItem 组件
        <ul
          class="t-list-item__action"
        >
          <li>
            <a
              href=""
            >
              操作
            </a>
          </li>
        </ul>
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 ListItem Props content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          ListItem 组件
        </div>
      </li>
    </div>
  </body>,
  "container": <div>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        ListItem 组件
      </div>
    </li>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 ListItemMeta Props description 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list-item__meta"
      >
        <div
          class="t-list-item__meta-content"
        >
          <h3
            class="t-list-item__meta-title"
          />
          <div
            class="t-list-item__meta-description"
          >
            <p>
              ListItemMeta 组件
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list-item__meta"
    >
      <div
        class="t-list-item__meta-content"
      >
        <h3
          class="t-list-item__meta-title"
        />
        <div
          class="t-list-item__meta-description"
        >
          <p>
            ListItemMeta 组件
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 ListItemMeta Props image 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list-item__meta"
      >
        <div
          class="t-list-item__meta-avatar"
        >
          <img
            alt=""
            src="https://tdesign.gtimg.com/list-icon.png"
          />
        </div>
        <div
          class="t-list-item__meta-content"
        >
          <h3
            class="t-list-item__meta-title"
          />
          <div
            class="t-list-item__meta-description"
          >
            <p />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list-item__meta"
    >
      <div
        class="t-list-item__meta-avatar"
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/list-icon.png"
        />
      </div>
      <div
        class="t-list-item__meta-content"
      >
        <h3
          class="t-list-item__meta-title"
        />
        <div
          class="t-list-item__meta-description"
        >
          <p />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List 组件测试 ListItemMeta Props title 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="t-list-item__meta"
      >
        <div
          class="t-list-item__meta-content"
        >
          <h3
            class="t-list-item__meta-title"
          >
            列表主内容
          </h3>
          <div
            class="t-list-item__meta-description"
          >
            <p />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="t-list-item__meta"
    >
      <div
        class="t-list-item__meta-content"
      >
        <h3
          class="t-list-item__meta-title"
        >
          列表主内容
        </h3>
        <div
          class="t-list-item__meta-description"
        >
          <p />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`asyncLoading.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-radio-group t-size-l t-radio-group__outline"
  >
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        type="radio"
        value="load-more"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        加载更多
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        type="radio"
        value="loading"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        加载中
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        type="radio"
        value="loading-custom"
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        自定义加载更多
      </span>
    </label>
    <label
      class="t-radio-button"
    >
      <input
        class="t-radio-button__former"
        type="radio"
        value=""
      />
      <span
        class="t-radio-button__input"
      />
      <span
        class="t-radio-button__label"
      >
        加载完成
      </span>
    </label>
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`header-footer.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list"
  >
    <div
      class="t-list__header"
    >
      这里是 Header
    </div>
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
    <div
      class="t-list__footer"
    >
      这里是 Footer
    </div>
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list"
  >
    <div
      class="t-list__header"
    >
      <p>
        通过 TNode 插入的 Header
      </p>
    </div>
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
    <div
      class="t-list__footer"
    >
      <p>
        通过 TNode 插入的 Footer
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`image-text.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-size-s"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                alt=""
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                alt=""
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                alt=""
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                alt=""
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`multiline.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          <div
            class="t-list-item__meta"
          >
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <div
                class="t-list-item__meta-description"
              >
                <p>
                  列表内容列表内容列表内容
                </p>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
          <ul
            class="t-list-item__action"
          >
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`scroll.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-size-s"
    style="height: 300px; overflow: auto;"
  >
    <ul
      class="t-list__inner"
    />
    <div
      class="t-list__load t-list__load--loading"
    >
      <div>
        <div
          class="t-loading t-loading--center t-size-m"
        >
          <svg
            class="t-loading__gradient t-icon-loading"
            height="1em"
            version="1.1"
            viewBox="0 0 14 14"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <foreignobject
              height="12"
              width="12"
              x="1"
              y="1"
            >
              <div
                class="t-loading__gradient-conic"
              />
            </foreignobject>
          </svg>
        </div>
        <span>
          正在加载中，请稍等
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-item__body tdesign-demo-item__body--list"
  >
    <h4>
      尺寸-小
    </h4>
    <div
      class="t-list t-size-s"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
    <h4
      style="margin-top: 32px;"
    >
      尺寸-中（默认）
    </h4>
    <div
      class="t-list"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
    <h4
      style="margin-top: 32px;"
    >
      尺寸-大
    </h4>
    <div
      class="t-list t-size-l"
    >
      <ul
        class="t-list__inner"
      >
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
        <li
          class="t-list-item"
        >
          <div
            class="t-list-item-main"
          >
            列表内容列表内容列表内容
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stripe.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-list t-list--stripe"
  >
    <ul
      class="t-list__inner"
    >
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          列表内容列表内容列表内容
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
